--- a/TimeManagement/TimeManagement.csproj
+++ b/TimeManagement/TimeManagement.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\SharedComponents\SharedComponents.csproj" />
   </ItemGroup>
 
 </Project>
