--- a/TimeManagement/appsettings.Development.json
+++ b/TimeManagement/appsettings.Development.json
@@ -5,5 +5,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "Host": {
+    "Port": 6001
   }
 }
