Move configuration into json file

--- a/TimeManagement/appsettings.json
+++ b/TimeManagement/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TimeManagementDb": "Server=localhost;Database=timemanagement;User=root;Password=1234;"
+  }
 }
