Fix sorting in client version

--- a/TimeManagement/appsettings.json
+++ b/TimeManagement/appsettings.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "TimeManagementDb": "Server=localhost;Database=timemanagement;User=root;Password=1234;"
-  }
+  },
+  "WeatherStackApiKey": "0f90bfe35df5ebd033b83ea653563b4b"
 }
